--- a/EAppointment.Domain/EAppointment.Domain.csproj
+++ b/EAppointment.Domain/EAppointment.Domain.csproj
@@ -8,7 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ardalis.SmartEnum" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.4" />
+    <PackageReference Include="TS.EntityFrameworkCore.GenericRepository" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
