--- a/EAppointment.Application/EAppointment.Application.csproj
+++ b/EAppointment.Application/EAppointment.Application.csproj
@@ -4,6 +4,12 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <trTreatWarningsAsErrors></TreatWarningsAsErrors>true
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.2.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+  </ItemGroup>
 
 </Project>
