--- a/EAppointment.Application/EAppointment.Application.csproj
+++ b/EAppointment.Application/EAppointment.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.4" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
     <PackageReference Include="TS.Result" Version="8.0.5" />
   </ItemGroup>
