--- a/EAppointment.Application/EAppointment.Application.csproj
+++ b/EAppointment.Application/EAppointment.Application.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\EAppointment.Domain\EAppointment.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\NewFolder\" />
+  </ItemGroup>
+
 </Project>
