--- a/EAppointment.WebApi/appsettings.json
+++ b/EAppointment.WebApi/appsettings.json
@@ -9,7 +9,7 @@
     "SqlServer": "Data Source=DESKTOP-L6NJT48\\SQLEXPRESS;Initial Catalog=eAppointmentDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "Jwt": {
-    "Issuer": "Taner Saydam",
+    "Issuer": "Ali Can Yücelş",
     "Audience": "www.eappointment.net",
     "SecretKey": "www.eappointment.net www.eappointment.net www.eappointment.net"
   },
